--- a/cGDIPlus.cls
+++ b/cGDIPlus.cls
@@ -104,7 +104,7 @@ Private Type GdiplusStartupInput
 End Type
 Private Declare Function GdiplusStartup Lib "gdiplus" (ByRef Token As Long, ByRef inputbuf As GdiplusStartupInput, Optional ByVal outputbuf As Long = 0) As Long
 Private Declare Sub GdiplusShutdown Lib "gdiplus" (ByVal Token As Long)
-Private Declare Function GdipLoadImageFromFile Lib "gdiplus" (ByVal FileName As Long, ByRef hImage As Long) As Long
+Private Declare Function GdipLoadImageFromFile Lib "gdiplus" (ByVal filename As Long, ByRef hImage As Long) As Long
 Private Declare Function GdipLoadImageFromStream Lib "gdiplus" (ByVal Stream As IUnknown, ByRef Image As Long) As Long
 Private Declare Function GdipGetImageBounds Lib "GdiPlus.dll" (ByVal nImage As Long, ByRef srcRect As RECTF, ByRef srcUnit As Long) As Long
 Private Declare Function GdipDisposeImage Lib "gdiplus" (ByVal Image As Long) As Long
@@ -170,8 +170,7 @@ Public Function isGDIplusOk(Optional ByRef gdiToken As Long, Optional ByVal Keep
     End If
 End Function
 
-'@Ignore FunctionReturnValueNotUsed
-Public Function SaveToPNG(ByVal FileName As String, ByRef outStream() As Byte, ByRef cHost As c32bppDIB, Optional ByVal GlobalToken As Long) As Boolean
+Public Function SaveToPNG(ByVal filename As String, ByRef outStream() As Byte, ByRef cHost As c32bppDIB, Optional ByVal GlobalToken As Long) As Boolean
 
     ' Function uses GDI+ to create a PNG file or stream
     ' Parameters:
@@ -179,7 +178,7 @@ Public Function SaveToPNG(ByVal FileName As String, ByRef outStream() As Byte, B
     ' outStream(). If FileName is vbNullString, then PNG is saved to this array, zero-bound
     ' cHost. The c32bppDIB class containing the image to convert to PNG
 
-    If cHost.Handle = 0& Then Exit Function
+    If cHost.handle = 0& Then Exit Function
     ' does the system have GDI+ on it?
     If GlobalToken = 0& Then
         If m_Token = GlobalToken Then
@@ -203,7 +202,7 @@ Public Function SaveToPNG(ByVal FileName As String, ByRef outStream() As Byte, B
             ' dib is bottom up, scan0 does top down, so flip it
             Call ModifyImageAttributes(6)
             
-            If FileName = vbNullString Then
+            If filename = vbNullString Then
                 ' Saving to stream/array. Create a null stream (IUnknown object)
                 Erase outStream
                 Set IIStream = CreateStream(outStream)
@@ -216,7 +215,7 @@ Public Function SaveToPNG(ByVal FileName As String, ByRef outStream() As Byte, B
             Else    ' saving to file
                 ' Note: If you are calling this from outside the c32bppDIB class, the file
                 ' must not exist; otherwise, the function fails.
-                SaveToPNG = (GdipSaveImageToFile(m_hImage, StrPtr(FileName), uEncCLSID(0&), ByVal 0&) = 0&)
+                SaveToPNG = (GdipSaveImageToFile(m_hImage, StrPtr(filename), uEncCLSID(0&), ByVal 0&) = 0&)
             End If
         End If
     End If
@@ -428,7 +427,7 @@ Friend Function RenderGDIplus(ByRef cHost As c32bppDIB, ByVal hDC As Long, _
 
 End Function
 
-Friend Function GDIplusLoadPNG(ByVal FileName As String, ByRef pngStream() As Byte, ByRef cHost As c32bppDIB, Optional ByVal GlobalToken As Long) As Boolean
+Friend Function GDIplusLoadPNG(ByVal filename As String, ByRef pngStream() As Byte, ByRef cHost As c32bppDIB, Optional ByVal GlobalToken As Long) As Boolean
 'Exit Function      ' un-rem to test/force PNG loading without GDI+
 
     ' Purpose: Use GDI+ to load a PNG either by fileName or by array/stream
@@ -456,7 +455,7 @@ Dim pStream As IUnknown
     
     On Error GoTo ExitRoutine
     
-    If FileName = vbNullString Then ' we need an array vs file name
+    If filename = vbNullString Then ' we need an array vs file name
         ' hack of my own. Create an IUnknown Stream that has the same properties
         ' and minimum methods needed as the IStream interface which VB does not
         ' expose. Once the stream is created, we have GDI+ load from it
@@ -464,7 +463,7 @@ Dim pStream As IUnknown
         If Not pStream Is Nothing Then Call GdipLoadImageFromStream(pStream, hImage)
 
     Else    ' we use the passed file name; have GDI+ load the file
-        Call GdipLoadImageFromFile(StrPtr(FileName), hImage)
+        Call GdipLoadImageFromFile(StrPtr(filename), hImage)
     End If
     
     If Not hImage = 0& Then
